# tcr-repertoire2structure

./: .gitignore  LICENSE  README.md  SUBMISSION.md  pyproject.toml
.playwright-mcp/: page-2026-07-09T09-07-43-617Z.yml
docs/: benchmark_preregistration.md  confidence_variance_analysis.md  fold_procedure.md  fold_qc_results.md  mhc_peptide_presentation.md  validation_results.md
docs/demo/: video-script.md
docs/superpowers/: affinetune-live-validation.md  mhcfine-live-validation.md  tcrdock-live-validation.md
paper/: README.md  main.md  make_paper_data.py  methods.md  outline.md
paper/data/: CANONICAL_NUMBERS.md  confidence_variance.csv  mhc_presentation.csv  scramble_anchor_permissiveness.csv  stub_contamination.csv  tcr_retrieval_top1.csv  validation_annotation.csv  validation_leakage.csv
paper/figures/: README.md
paper/supplementary/: supplementary.md
paper/tables/: table2_preregistration.md
science/: README.md
science/analysis/: benchmark_preregistration.md  fold_qc_results.md  mhc_peptide_presentation.md  validation_donor1_metrics.json
science/data/: validation_tcrdock_classI.csv
science/paper/: README.md  main.md  methods.md  outline.md  sources.md
science/scripts/: analyze_confidence_variance.py  analyze_stub_contamination.py  (+13 more)
scripts/: analyze_confidence_variance.py  analyze_mhc_scramble.py  build_benchmark_fold_notebook.py  build_colab_notebook.py  build_docx.py  build_protenix_inputs.py  build_tcrdock_notebook.py  capture_demo.py  check_scramble_anchors.py  extract_supp_data.py  figstyle.py  plot_confidence_variance.py  plot_mhc_scramble.py  plot_retrieval.py  plot_structure_3d.py  plot_supp_chain_pair.py  plot_supp_gallery.py  plot_supp_groove_conf.py  plot_synthesis.py  plot_validation.py  qc_folds.py  render_gallery.py  render_structure_pymol.py  run_benchmark_arm.py  run_tablo_arm.py  run_validation_arm.py
tests/: test_agent_tools.py  test_agents_config.py  test_agents_intake.py  test_annotate.py  test_benchmark.py  test_benchmark_driver.py  test_build_fold_artifact.py  test_cli.py  test_cli_transcript.py  test_compute_routes.py  test_construct_io.py  test_fold.py  test_foldprep.py  test_grouping.py  test_hardening.py  test_ingest.py  test_intake.py  test_interactive_loop.py  test_list_compute_routes.py  test_msa.py  test_pipeline_offline.py  test_protenix_script.py  test_qc.py  test_record_intake.py  test_record_local_folds.py  test_report.py  test_runstate.py  test_structure_tools.py  test_stub_warning.py  test_tcrdock_inputs.py  test_tool_inputs.py  test_tool_notebook.py  test_transcript.py  test_validate.py  test_viewer.py  test_webapp.py  test_webapp_cli.py
(+62 files in other folders)
