[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rep2struct"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0", "polars>=1.0", "numpy>=1.24",
  "biopython>=1.83", "jinja2>=3.1", "claude-agent-sdk>=0.1",
  "httpx>=0.24",
  # germline reconstruction, TCRdist, paired similarity; the tcrdist extra
  # pulls pwseqdist for authoritative scoring (BLOSUM fallback without it).
  "tcr-explorer[tcrdist]>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rep2struct = ["data/*.json", "templates/*.j2", "viewer/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
